--- a/image-search-at-scale/static/index.html
+++ b/image-search-at-scale/static/index.html
@@ -4,6 +4,8 @@
     <title>Pinecone Image Similarity Search</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
@@ -28,6 +30,12 @@
     </style>
 </head>
 <body>
+    <form>
+        <div class="search">
+            <span class="search-icon material-symbols-outlined"> search </span>
+            <input class="search-input" type="search" placeholder="Or use text search">
+        </div>
+    </form>
     <div class="container">
         <div class="row">
             <div class="col d-flex">
